# resnet_cifar10

./: README.md  classify.py  download_custom_test_images.sh  model.py  pyproject.toml  train.py  utils.py
