[project]
name = "resnet-cifar10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "torch>=2.6.0",
    "torchmetrics>=1.6.2",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ipython>=9.0.1",
    "tensorboard>=2.19.0",
    "tqdm>=4.67.1",
]
